--- a/manifest.json
+++ b/manifest.json
@@ -19,20 +19,12 @@
     ],
     "screenshots": [
         {
-          "src": "/lofimaker/screenshot1.jpg",
-          "type": "image/jpeg"
+          "src": "icon-192x192.png",
+          "type": "image/png"
         },
         {
-          "src": "/lofimaker/screenshot2.jpg",
-          "type": "image/jpeg"
-        },
-        {
-          "src": "/lofimaker/screenshot3.jpg",
-          "type": "image/jpeg"
-        },
-        {
-          "src": "/lofimaker/screenshot4.jpg",
-          "type": "image/jpeg"
+          "src": "icon-512x512.png",
+          "type": "image/png"
         }
         ]
 }
